Updated like button, corrected aligning of cards header

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
+    align-items: flex-start;
 }
 
 .cards-item__header_text {
@@ -125,7 +126,9 @@
 }
 
 .like-button:active{
-/*тут подозреваю, нужен js, чтобы при нажатии кнопка становилась красной (или бы вызывался другой svg из спрайта). пока не умею*/
+/*тут подозреваю, нужен js, чтобы при нажатии кнопка становилась и оставалсь красной (или бы вызывался другой svg из спрайта?). пока не умею, сделала смену цвета только при нажатии*/
+    fill:#FF4338;
+    stroke: #FF4338;
 }
 
 
